--- a/bin/project.config.json
+++ b/bin/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "game",
 	"libVersion": "game",
-	"appid": "wx9170ca1ff6f31088",
+	"appid": "wx838c74f50f826e02",
 	"projectname": "layaWXTest",
 	"condition": {
 		"search": {
