--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,12 @@ release
 .laya/chrome/*
 /.laya/chrome
 
-*.js linguist-language=typescript
+*.md linguist-language=TypeScript
+*.yml linguist-language=TypeScript
+*.html linguist-language=TypeScript
+*.js linguist-language=TypeScript
+*.xml linguist-language=TypeScript
+*.css linguist-language=TypeScript
+*.sql linguist-language=TypeScript
+*.uml linguist-language=TypeScript
+*.cmd linguist-language=TypeScript
